manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    istio-injection: enabled
